updated swagger docs and minor changes in get user profile API
